# -OpenVINO-FPGA-

./: README.md
FP16/: solver-new128_iter_10000.mapping  solver-new128_iter_10000.xml
defog/实现/: DehazeFCN-new128.prototxt  DehazeNet-new128.py  solver-new128_iter_10000.caffemodel
defog/训练/: solver-new128.prototxt  train-new.sh  train-new128.prototxt
testdemo/: CMakeLists.txt  test_demo.h  testdemo.cpp
